# voicetotext

./: README.md  main.py  pyproject.toml  requirements.txt
voicetotext/: __init__.py  config.py  controller.py
voicetotext/audio/: __init__.py  recorder.py
voicetotext/optimize/: __init__.py  base.py  factory.py  noop_backend.py  ollama_backend.py
voicetotext/transcribe/: __init__.py  base.py  factory.py  whisper_backend.py  whispercpp_backend.py
voicetotext/ui/: __init__.py  window.py
voicetotext/utils/: __init__.py  clipboard.py  logging_setup.py  sound.py
